--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -47,6 +47,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Source\Languages\Parsers\PHP.cs" />
+    <Compile Include="Source\Languages\Parsers\SystemVerilog.cs" />
+    <Compile Include="Source\Languages\Parsers\Verilog.cs" />
+    <Compile Include="Source\Languages\Parsers\VHDL.cs" />
     <Compile Include="Source\Output\HTML\SearchIndex\SearchIndex_nd.cs" />
     <Compile Include="Source\StartupIssues.cs" />
     <Compile Include="Source\Config\Targets\ImageFolder.cs" />
